--- a/frontend/src/pages/products/single_product/_div.scss
+++ b/frontend/src/pages/products/single_product/_div.scss
@@ -66,7 +66,7 @@
 		padding-top: 1vw;
 		grid-area: 4 / 2;
 		.productRatingStarts {
-			font-size: 2vw;
+			font-size: 20px;
 			letter-spacing: 2px;
 		}
 	}
@@ -75,8 +75,8 @@
 		color: white;
 		display: grid;
 		grid-area: 7 / 2;
-		width: 20%;
-		margin-left: 80%;
+		width: 30%;
+		margin-left: 70%;
 		z-index: 10;
 		border-radius: 20px;
 		align-items: center;
@@ -196,7 +196,6 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		zoom: 2;
 		.productName {
 			align-self: flex-start;
 		}
