--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -1,5 +1,5 @@
 .divtext{
-	display: grid;
+	display: inline-grid;
 	grid-column-start: 1;
 	grid-column-end: 5;
 }
@@ -136,6 +136,11 @@
 	.div_products_page2 {
 		grid-template-columns: 29% 29% 29%;
 	}
+	.divtext{
+		display: inline-grid;
+		grid-column-start: 1;
+		grid-column-end: 4;
+	}
 }
 
 @media only screen and (max-width: 992px) {
@@ -148,6 +153,11 @@
 		align-items: center;
 		width: 100%;
 	}
+	.divtext{
+		display: inline-grid;
+		grid-column-start: 1;
+		grid-column-end: 3;
+	}
 }
 
 @media only screen and (max-width: 600px) {
@@ -159,5 +169,10 @@
 		justify-content: space-evenly;
 		align-items: center;
 		width: 100%;
+	}
+	.divtext{
+		display: inline-grid;
+		grid-column-start: 1;
+		grid-column-end: 2;
 	}
 }
