--- a/frontend/src/pages/products/single_product/_div.scss
+++ b/frontend/src/pages/products/single_product/_div.scss
@@ -1,3 +1,45 @@
+.divrecenze{
+width: 90%;
+height: fit-content;
+min-height: 300px;
+margin-left: auto;
+margin-right: auto;
+margin-top: 20px;
+margin-bottom: 20px;
+.h2recenze{
+	margin-left: 2%;
+	margin-top: 2%;
+}
+.arecenze{
+	margin-left: 2%;
+	margin-right: 2%;
+	text-decoration: none;
+	color: black;
+}
+}
+.divproductsingle_img{
+	overflow: hidden;
+grid-row: 1;
+text-align: center;
+justify-content: center;
+height: 400px;
+border-radius: 20px;
+display: flex;
+
+.imgs{
+	height: 250px;
+	border-radius: 20px;
+	width: auto;
+	object-fit: contain;
+	-webkit-object-fit: contain;
+	-moz-object-fit: contain;
+	-o-object-fit: contain;
+	margin-left: auto;
+	margin-right: auto;
+}
+}
+
+
 .divnav {
 	display: flex;
 	flex-direction: row;
@@ -104,9 +146,14 @@
 	flex-basis: 100%;
 }
 .otherProducts {
-	display: flex;
-	margin: 0 6vw 0 6vw;
+	display: grid;
+	width: 90%;
 	gap: 1vw;
+	grid-template-columns: 25% 25% 25% 25%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
 	.otherProductsItem {
 		display: grid;
 
@@ -130,7 +177,6 @@
 				height: 20vw;
 				width: 20vw;
 				object-fit: cover;
-				margin-left: -2vw;
 			}
 		}
 
@@ -181,14 +227,24 @@
 			font-style: normal;
 			font-weight: 400;
 			line-height: normal;
-			margin-top: 0vw;
+			margin-top: 20px;
 		}
 	}
 }
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 890px) {
 	.otherProducts {
-		flex-wrap: 2;
+		grid-template-columns: 33% 33% 33%;
+
 	}
+	
+}
+
+@media only screen and (max-width: 725px) {
+
+	.otherProducts {
+		grid-template-columns: 50% 50%;
+	}
+
 }
 
 @media only screen and (max-width: 700px) {
@@ -214,4 +270,12 @@
 	.divnav {
 		padding-left: 4vh;
 	}
+}
+
+@media only screen and (max-width: 500px) {
+	.otherProducts {
+		grid-template-columns: 100%;
+	}
+
+
 }
