--- a/frontend/src/pages/delivery_summary/_style.scss
+++ b/frontend/src/pages/delivery_summary/_style.scss
@@ -1,3 +1,53 @@
-.div_del_sum_grid{
-    
+.div_del_sum_grid {
+  display: grid;
+  width: 90%;
+  margin: 1% auto 1% auto;
+  //min-height: 150px;
+  grid-template-columns: 50% 50%;
+}
+
+.summary_data {
+  margin: 1% 1% 1% 1%;
+  padding-left: 2%;
+  padding-top: 2%;
+  background-color: #dddada;
+  border-radius: 20px;
+  height: 100%;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.cartitems_sum {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25% 25% 25% 25%;
+  margin: 1% 1% 1% 1%;
+  background-color: #dddada;
+  border-radius: 20px;
+  height: 100%;
+
+  .cartname_sum {
+    padding: 2%;
+  }
+  .cartquantity_sum {
+    padding: 2%;
+    input {
+      width: 50px;
+    }
+  }
+  .cartdelete_sum {
+    padding: 2%;
+  }
+  .cartprice_sum {
+    padding: 2%;
+  }
+  .cartimg_sum {
+    padding: 2%;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 5;
+  }
 }
